# late-firefly

./: .ghci  .ghci-jsaddle  .gitignore  .gitmodules  Dockerfile  LateFirefly.Disqus.imports  LateFirefly.Index.Episode.imports  LateFirefly.Index.imports  LateFirefly.Parser.imports  cabal.ghcjs.project  cabal.project  db.sqlite  default.nix  docker.nix  haste-app  haste-app-ghcjs  late-firefly.cabal  massaraksh  package.json  reflex-platform  release.nix  stack.yaml  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
assets/: index.html
build-docker-action/: Dockerfile  action.yml  entrypoint.sh
iwatchtheoffice.com/: .ghc.environment.x86_64-linux-8.6.4  Main.hs  bower.json  cabal.project  db.json  index.html  iwatchtheoffice-com.cabal  package.json  schema.sql  shell.nix  stack.yaml  test.db  update.ts  xhr.ts
iwatchtheoffice.com/IWatchTheOffice/: Db.hs  Parser.hs
iwatchtheoffice.com/IWatchTheOffice/Db/: Data.hs
iwatchtheoffice.com/TheOffice/: Home.hs  Main.hs  RPC.hs  Utils.hs
iwatchtheoffice.com/src/: AppM.purs  Err.purs  Main.purs  MainFrontend.purs
iwatchtheoffice.com/src/Capability/: Navigate.purs
iwatchtheoffice.com/src/Component/: Router.purs
iwatchtheoffice.com/src/Component/HTML/: Utils.purs
iwatchtheoffice.com/src/Data/: Route.purs
iwatchtheoffice.com/src/Page/: Home.purs
js/: index.js
src/: Aeson.hs  Backend.hs  DB.hs  Dev.hs  DevelMain.hs  Disqus.hs  Eio.hs  Icons.hs  Index.hs  Intro.hs  Main.hs  Orphans.hs  Parser.hs  RPC.hs  Router.hs  Schema.hs  Scrape.hs  Series.hs  Server.hs  Template.hs  Utils.hs  Widget.hs
src-ghc/JavaScript/Web/: XMLHttpRequest.hs  XMLHttpRequest.hs-boot
src-ghc/JavaScript/Web/XMLHttpRequest/: Internal.hs
src-ghcjs/JavaScript/Web/: XMLHttpRequest.hs
src/Admin/: GraphQL.hs
src/DB/: Base.hs  QQ.hs  TH.hs  Transaction.hs
src/IMDB/: GraphQL.hs  Schema.hs  Scrape.hs  Types.hs
src/LF/: Backend.hs  DB.hs  Diff.hs  Index.hs  Orphans.hs  Prelude.hs  Router.hs
src/LF/DB/: Base.hs  Base.hs-boot  QQ.hs  TH.hs  Transaction.hs
src/LF/TheOffice/: Main.hs  Schema.hs  Scrape.hs
src/LateFirefly/: Aeson.hs  Backend.hs  DB.hs  Diff.hs  Disqus.hs  Eio.hs  Icons.hs  Index.hs  JSaddle.hs  Orphans.hs  Parser.hs  Prelude.hs  RPC.hs  Router.hs  Schema.hs  Series.hs  Series2.hs  Template.hs  Template.hs-boot  Utils.hs  Widget.hs
src/LateFirefly/DB/: Base.hs  Base.hs-boot  QQ.hs  TH.hs  Transaction.hs
src/LateFirefly/IMDB/: GraphQL.hs  Schema.hs  Scrape.hs
src/LateFirefly/Index/: Episode.hs  Season.hs  SeasonItem.hs
src/LateFirefly/RPC/: TH.hs
src/LateFirefly/Router/: TH.hs  Wai.hs
src/LateFirefly/Scrape/: IWatchTheOffice.hs  IsubsMovies.hs
src/LateFirefly/Series/: Episode.hs  Rules.hs  Season.hs  SeasonItem.hs  Types.hs
src/LateFirefly/TheOffice/: Schema.hs  Scrape.hs
src/LateFirefly/Widget/: Prelude.hs
src/Parser/TheOffice/: Parser.hs
src/RPC/: TH.hs
src/Router/: TH.hs  Wai.hs
src/Scrape/: IWatchTheOffice.hs  IsubsMovies.hs
src/Series/: Episode.hs  Rules.hs  Season.hs  SeasonItem.hs  Types.hs
src/Site/: Episode.hs  Home.hs  Index.hs  Movie.hs  Search.hs  Series.hs  Template.hs  Template.hs-boot  Title.hs  Types.hs
src/Telikov/: Client.hs  Effects.hs  Header.hs  Home.hs  Styles.hs
src/VidSrc/: Scrape.hs
src/Widget/: Base.hs  Prelude.hs
telikov/: .stylish-haskell.yaml  telikov.cabal
telikov/src/Database/SQLite/Simple/: Generics.hs
telikov/src/Parser/TheOffice/: Db.hs  Parser.hs  TH.hs
telikov/src/Telikov/: Client.hs  Database.hs  Effects.hs  Header.hs  Home.hs  Main.hs  RPC.hs  Server.hs  Styles.hs  Utils.hs
telikov/src/Telikov/Capabilities/: Database.hs
theoffice-tv-online/: ChangeLog.md  LICENSE  cabal.sandbox.config  stack.yaml  theoffice-tv-online.cabal
theoffice-tv-online/output/: index.html
theoffice-tv-online/src/: Main.hs  SDOM.hs  extra-rts.js
theoffice-tv-online/src/SDOM/: Html.hs  Prop.hs
theoffice-tv-online/src/SDOM/Html/: Dynamic.hs
theoffice-tv-online/src/SDOM/Prop/: Dynamic.hs
theoffice-tv-online/src/Stitch/Combinators/: Extra.hs
theoffice-tv-online/src/TheOffice/: Episode.hs  Home.hs  Router.hs  Season.hs  Style.hs
theoffice-tv.online/: db.json  index.html  package.json  tsconfig.json  webpack.config.js
theoffice-tv.online/src/: db.ts  episode.ts  home.ts  index.ts  routes.ts  season.ts
