name:                late-firefly
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

Flag production
  default: False
  description: Adds optimisation

executable late-firefly
  main-is: Main.hs
  ghc-options:
    -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-matches
    -Wno-unused-do-bind -Wno-partial-type-signatures -Wno-unticked-promoted-constructors
  hs-source-dirs: src ../massaraksh/src
  
  build-depends:
    attoparsec,
    base,
    base64-bytestring,
    bytestring,
    constraints,
    containers,
    data-default,
    direct-sqlite,
    errors,
    exceptions,
    flat,
    generic-lens,
    generic-monoid,
    haskell-src-meta,
    http-types,
    inflections,
    jsaddle,
    lens,
    massaraksh,
    mtl,
    natural-transformation,
    network-uri,
    optparse-generic,
    ordered-containers,
    process,
    shakespeare,
    split,
    sqlite-simple,
    template-haskell,
    text,
    text-show,
    time,
    transformers,
    unliftio-core,
    utf8-string,
    uuid,
    uuid-types

  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    BangPatterns
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    RecursiveDo
    StaticPointers

  if !impl(ghcjs)
    build-depends:
      aeson,
      tagsoup,
      lens-regex,
      regex-tdfa,
      tagsoup-lens,
      warp,
      wai,
      wai-app-static,
      wai-extra,
      jsaddle-warp,
      wreq
    other-modules:
      LateFirefly.TheOffice.Scrape
    hs-source-dirs: src-ghc
    if flag(production)
      ghc-options: -O2
  else
    if flag(production)
      -- FIXME: Enabling optimizations in GHCJS breaks flat-rpc
      ghc-options: -dedupe -O2
    hs-source-dirs: src-ghcjs
    build-depends: ghcjs-base, ghcjs-prim
