name:                late-firefly
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

Flag production
  default: False
  description: Adds optimisation

executable late-firefly
  main-is: Main.hs
  ghc-options:
    -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-matches
    -Wno-unused-do-bind -Wno-partial-type-signatures -Wno-unticked-promoted-constructors
  hs-source-dirs: src src-ghc
  
  build-depends:
    aeson,
    attoparsec,
    base,
    base64-bytestring,
    bytestring,
    constraints,
    containers,
    data-default,
    direct-sqlite,
    errors,
    exceptions,
    flat,
    generic-lens,
    generic-lens-core,
    generic-monoid,
    haskell-src-meta,
    http-types,
    inflections,
    jsaddle,
    jsaddle-warp,
    lens,
    lens-regex,
    massaraksh,
    mtl,
    natural-transformation,
    network-uri,
    nice-html,
    optparse-generic,
    ordered-containers,
    process,
    regex-tdfa,
    shakespeare,
    split,
    sqlite-simple,
    tagsoup,
    tagsoup-lens,
    template-haskell,
    text,
    text-show,
    time,
    transformers,
    unordered-containers,
    utf8-string,
    uuid,
    uuid-types,
    wai,
    wai-app-static,
    wai-extra,
    wai-util,
    lucid,
    warp,
    wreq
      
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StaticPointers
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    EmptyDataDecls

  if flag(production)
    ghc-options: -O2
