name:                late-firefly
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

Flag production
  default: False
  description: Adds optimisation

executable late-firefly
  main-is: Main.hs
  ghc-options:
    -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-matches
    -Wno-unused-do-bind -Wno-partial-type-signatures -Wno-unticked-promoted-constructors
  hs-source-dirs: src src-ghc ../massaraksh/src
  
  build-depends:
    aeson,
    attoparsec,
    autoexporter,
    base,
    bytestring,
    constraints,
    containers,
    data-default,
    direct-sqlite,
    errors,
    exceptions,
    foreign-store,
    generic-lens,
    generic-lens-core,
    generic-monoid,
    haskell-src-meta,
    http-types,
    inflections,
    jmacro,
    lens,
    lens-regex,
    lucid,
    mtl,
    network-uri,
    optparse-generic,
    process,
    regex-tdfa,
    shakespeare,
    slug,
    split,
    sqlite-simple,
    tagsoup,
    tagsoup-lens,
    template-haskell,
    text,
    text-show,
    time,
    transformers,
    unordered-containers,
    utf8-string,
    uuid,
    uuid-types,
    wai,
    wai-app-static,
    wai-extra,
    wai-util,
    warp,
    wreq,
    zenc,
    zlib
      
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StaticPointers
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    EmptyDataDecls

  if flag(production)
    ghc-options: -O2 -threaded
