name:                iwatchtheoffice-com
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
               
executable parser
  main-is:             IWatchTheOffice/Parser.hs
  ghc-options:         -optc-Os -O4
  other-modules: IWatchTheOffice.Db
  build-depends:       base
                     , wreq
                     , transformers
                     , mtl
                     , utf8-string
                     , bytestring
                     , exceptions
                     , optparse-applicative
                     , tagsoup
                     , tagsoup-lens
                     , process
                     , sqlite-simple
                     , text
                     , time
                     , split
                     , aeson
                     , lens
-- executable theoffice
--   main-is:             TheOffice/Main.hs
--   other-modules: IWatchTheOffice.Db
--   build-depends:       base
--                      , transformers
--                      , mtl
--                      , utf8-string
--                      , bytestring
--                      , exceptions
--                      , text
--                      , time
--                      , aeson
--                      , haste-app
--                      , massaraksh
--                      , split
--                      , lens
--                      , ghcjs-dom-jsaddle
--                      , jsaddle
--                      , jsaddle-warp
--                      , raw-strings-qq
--                      , websockets
--                      , wai
--                      , wai-websockets
                     
