name:                telikov
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
               
executable parser
  main-is:             Parser/TheOffice/Parser.hs
  ghc-options:         -optc-Os -O4 -Wall -Wno-missing-signatures
  other-modules:    Parser.TheOffice.Db
  hs-source-dirs:      src
  if impl(ghcjs)
    buildable: False
  build-depends:       base
                     , wreq
                     , transformers
                     , mtl
                     , utf8-string
                     , bytestring
                     , exceptions
                     , optparse-applicative
                     , tagsoup
                     , tagsoup-lens
                     , process
                     , sqlite-simple
                     , text
                     , time
                     , split
                     , aeson
                     , lens
                     
executable telikov-client
  hs-source-dirs:      src
  main-is:             Telikov/Client.hs
  if !impl(ghcjs)
    buildable: False
  ghc-options:        -Wall -Wno-missing-signatures -optc-Os -O4 
  build-depends:       base
                     , transformers
                     , mtl
                     , utf8-string
                     , bytestring
                     , exceptions
                     , text
                     , time
                     , aeson
                     , haste-app
                     , massaraksh
                     , split
                     , lens
                     , ghcjs-dom-jsaddle
                     , jsaddle
                     , jsaddle-warp
                     , raw-strings-qq
                     , shakespeare
                     , regex-compat-tdfa
                     , sqlite-simple-stub
                     , ghcjs-base

                   
executable telikov-server
  hs-source-dirs:      src
  if impl(ghcjs)
    buildable: False
  main-is:             Telikov/Server.hs
  ghc-options:        -Wall -Wno-missing-signatures
  build-depends:       base
                     , transformers
                     , mtl
                     , utf8-string
                     , bytestring
                     , exceptions
                     , text
                     , time
                     , aeson
                     , haste-app
                     , massaraksh
                     , split
                     , lens
                     , ghcjs-dom-jsaddle
                     , jsaddle
                     , jsaddle-warp
                     , raw-strings-qq
                     , shakespeare
                     , regex-compat-tdfa
                     , sqlite-simple
                     , websockets
                     , wai
                     , wai-websockets
                     , http-types
