name:                telikov
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
               
executable parser
  main-is:             Parser/TheOffice/Parser.hs
  ghc-options:         -optc-Os -O4 -Wall -Wno-missing-signatures -fplugin=Polysemy.Plugin
  other-modules:    Parser.TheOffice.Db
  hs-source-dirs:      src
  if impl(ghcjs)
    buildable: False
  build-depends:       base
                     , wreq
                     , transformers
                     , mtl
                     , utf8-string
                     , bytestring
                     , exceptions
                     , optparse-generic
                     , tagsoup
                     , tagsoup-lens
                     , process
                     , sqlite-simple
                     , text
                     , time
                     , split
                     , aeson
                     , lens
                     , polysemy
                     , polysemy-plugin
                     , jsaddle
                     , haste-app-ghcjs
                     
  default-extensions: FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NamedFieldPuns
                    , OverloadedStrings
                    , QuasiQuotes
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeOperators
                    , ConstraintKinds
                    , TypeFamilies
                    , DataKinds
                    , PolyKinds

  
executable telikov-client
  hs-source-dirs:      src
  main-is:             Telikov/Client.hs
  if !impl(ghcjs)
    buildable: False
  ghc-options:        -Wall -Wno-missing-signatures -optc-Os -O4 -dedupe
  build-depends:       base
                     , transformers
                     , mtl
                     , utf8-string
                     , bytestring
                     , exceptions
                     , text
                     , time
                     , aeson
                     , haste-app-ghcjs
                     , split
                     , lens
                     , ghcjs-dom-jsaddle
                     , massaraksh
                     , raw-strings-qq
                     , shakespeare
                     , sqlite-simple-stub
                     , ghcjs-base
                     , polysemy
                     , th-abstraction
                     
  default-extensions: FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NamedFieldPuns
                    , OverloadedStrings
                    , QuasiQuotes
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeOperators
                    , ConstraintKinds
                    , TypeFamilies
                    , DataKinds
                    , PolyKinds

  
executable telikov-server
  hs-source-dirs:      src
  if impl(ghcjs)
    buildable: False
  main-is:             Telikov/Server.hs
  ghc-options:        -Wall -Wno-missing-signatures -fplugin=Polysemy.Plugin
  build-depends:       base
                     , transformers
                     , mtl
                     , utf8-string
                     , bytestring
                     , exceptions
                     , text
                     , time
                     , aeson
                     , haste-app-ghcjs
                     , massaraksh
                     , split
                     , lens
                     , ghcjs-dom-jsaddle
                     , jsaddle
                     , jsaddle-warp
                     , raw-strings-qq
                     , shakespeare
                     , regex-compat-tdfa
                     , sqlite-simple
                     , websockets
                     , wai
                     , wai-websockets
                     , http-types
                     , polysemy
                     , polysemy-plugin
                     , wreq
                     
  default-extensions: FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NamedFieldPuns
                    , OverloadedStrings
                    , QuasiQuotes
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeOperators
                    , ConstraintKinds
                    , TypeFamilies
                    , DataKinds
                    , PolyKinds
